--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -13,8 +13,10 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        REPORTE DEL TRANSMISOR ... nombre
-        <small> </small>
+        <b>Reportes del transmisor:</b> {{arduino.name}}
+        <small>
+          <b>Proyecto:</b> {{arduino.project}}
+        </small>
       </h1>
     </section>
 
@@ -31,15 +33,31 @@
           </div>
           <!-- /.box-header -->
           <!-- form start -->
+
             <form class="form-horizontal" role="form" action="" method="post">
             <div class="box-body">
                 {% csrf_token %}
-                <div class="col-sm-offset-2 col-sm-8">
-                       {{form.non_field_errors}}
-                    </div>
+                <div class="form-group">
+                  <label for="input" class="col-sm-2 control-label">
+                    Fechas del reporte:
+                  </label>
+                  <div class="col-sm-10">
+                   <button type="button" class="btn btn-default pull-left"  id="daterange">
+                     <span><i class="fa fa-calendar"></i>
+                       Seleccionar
+                     </span><i class="fa fa-caret-down"></i>
+                   </button>
+                  </div>
+                  <div class="col-sm-10">
+                    <span id="dates"></span>
+                  </div>
+                </div>
+
                 {% for field in form %}
                 <div class="form-group">
-                    <label for="input" class="col-sm-2 control-label">{{ field.label }}</label>
+                    <label for="input" class="col-sm-2 control-label" id="form_{{forloop.counter0}}">
+                      {{ field.label }}
+                    </label>
                     <div class="col-sm-10">
                        {% render_field field class="form-control" %}
                     </div>
@@ -48,7 +66,9 @@
                     </div>
                 </div>
                 {% endfor %}
-
+                <div class="col-sm-offset-2 col-sm-8">
+                  {{form.non_field_errors}}
+                </div>
             </div>
             <!-- /.box-body -->
             <div class="box-footer">
@@ -71,5 +91,75 @@
 
 
 {% block content_js %}
+  <script type="application/javascript">
+  $(document).ready(function(){
 
+    $("#form_0").hide();
+    $("#id_min_time").hide();
+    $("#form_1").hide();
+    $("#id_max_time").hide();
+  });
+
+
+  $('#daterange').daterangepicker({
+    locale: {
+     format: "MM/DD/YYYY h:mm A",
+     "separator": " - ",
+     applyLabel: "Aplicar",
+     cancelLabel: "Cancelar",
+     fromLabel: "Del",
+     toLabel: "Al",
+     daysOfWeek: [
+          "Dom",
+          "Lun",
+          "Mar",
+          "Mie",
+          "Jue",
+          "Vie",
+          "Sab"
+      ],
+      monthNames: [
+        "Enero",
+        "Febrero",
+        "Marzo",
+        "Abril",
+        "Mayo",
+        "Junio",
+        "Julio",
+        "Agosto",
+        "Septiembre",
+        "Octubre",
+        "Noviembre",
+        "Diciembre"
+      ],
+   },
+   opens: "center",
+   drops: "down",
+   showWeekNumbers:true,
+   timePicker: true,
+   timePickerIncrement: 10,
+   minDate: moment().subtract(40, 'days'), //moment(min_date,"YYYY-MM-DD"),
+   maxDate: moment().add(1,'days'),
+   startDate: moment(), //moment(min_date,"YYYY-MM-DD"),
+   endDate: moment() //moment(max_date,"YYYY-MM-DD")
+  },
+  function (start, end) {
+
+    filter_date_start = start.format('YYYY-MM-DD HH:mm');
+    filter_date_end   = end.format('YYYY-MM-DD HH:mm');
+
+    var epoch_start   = Date.parse(filter_date_start) + "";
+    var epoch_end     = Date.parse(filter_date_end)   + "";
+
+    epoch_start = epoch_start.substring(0,(epoch_start.length-3));
+    epoch_end   = epoch_end.substring(0,(epoch_end.length-3));
+
+    $("#dates").html("Fechas seleccionadas<b>" + filter_date_start+'</b> al <b>' +filter_date_end + '</b>' );
+
+    console.log(epoch_start);
+    console.log(epoch_end);
+    $("#id_min_time").val(epoch_start);
+    $("#id_max_time").val(epoch_end);
+  });
+</script>
 {% endblock content_js %}
