FRONT - Reports - Update

--- a/client/templates/client/user_selected_project.html
+++ b/client/templates/client/user_selected_project.html
@@ -87,7 +87,7 @@
                             <button  type="button" class="btn btn-success">Ver Detalle</button>
                           </a>
                           <a href="/dash/reports/{{arduino.id}}" target="_self">
-                            <button  type="button" class="btn btn-info">Generar Reporte</button>
+                            <button  type="button" class="btn btn-info">Descargar Lecturas</button>
                           </a>
                         </div>
                       </td>
