--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -13,7 +13,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        <b>Reportes del transmisor:</b> {{arduino.name}}
+        <b>Lecturas del transmisor:</b> {{arduino.name}}
         <small>
           <b>Proyecto:</b> {{arduino.project}}
         </small>
@@ -28,7 +28,7 @@
         <div class="box box-info">
           <div class="box-header with-border">
             <h3 class="box-title">
-              Seleccione el sensor y rango de fechas del reporte
+              Seleccione el sensor y rango de fechas de las lecturas
             </h3>
           </div>
           <!-- /.box-header -->
@@ -39,7 +39,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                   <label for="input" class="col-sm-2 control-label">
-                    Fechas del reporte:
+                    Fechas de las lecturas:
                   </label>
                   <div class="col-sm-10">
                    <button type="button" class="btn btn-default pull-left"  id="daterange">
@@ -71,7 +71,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
               <a href="{% url 'main' %}" class="btn btn-default">Regresar</a>
-              <button type="submit" class="btn btn-primary">Generar</button>
+              <button type="submit" class="btn btn-primary">Descargar</button>
             </div>
             <!-- /.box-footer -->
           </form>
@@ -102,7 +102,7 @@
         var idEpoch = {{sens.id}};
       {% endif %}
     {% endfor %}
-    $('#id_sensor option[value='+idEpoch+']').remove();
+    //$('#id_sensor option[value='+idEpoch+']').remove();
   });
 
 
