--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -239,7 +239,7 @@
       $("#canChangeProject").hide();
     }
 
-    canChangeProject
+    //canChangeProject
 
     actualProject = {{ project_list.first.id }} ;
     actualArduino = {{ project_list.first.arduinos.first.id }};
