--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -426,12 +426,51 @@ function useWSData(data){
   }
 }
 
+function getTodayRange(actualDate){
+
+  var day     =  actualDate.getDate() +'';
+  var month   =  actualDate.getMonth() + 1 +'';
+  var hour    =  actualDate.getHours() +'';
+  var minutes =  actualDate.getMinutes()+'';
+  var seconds =  actualDate.getSeconds()+'';
+
+  if(day.length == 1)
+    day = '0'+day;
+  if(month.length == 1)
+    month = '0'+month;
+  if(hour.length == 1)
+    hour = '0'+hour;
+  if(minutes.length == 1)
+    minutes = '0'+minutes;
+  if(seconds.length == 1)
+    seconds = '0'+seconds;
+
+  var dateFormat = day +'/'+month+'/'+actualDate.getFullYear();
+
+  var firstTime = '00:00:00';
+  var lastTime  = '23:59:59';
+
+  var firstDate = dateFormat + ' ' + firstTime;
+  var lastDate  = dateFormat + ' ' + lastTime;
+
+  var epochDateFirst  = Date.parse(firstDate) + "";
+  var epochDateLast   = Date.parse(lastDate) + "";
+
+  epochDateFirst = epochDateFirst.substring(0,(epochDateFirst.length-3));
+  epochDateLast  = epochDateLast.substring(0,(epochDateLast.length-3));
+
+  //console.log(firstDate);
+  //console.log(lastDate);
+  //console.log(epochDateFirst);
+  //console.log(epochDateLast);
+
+  return [epochDateFirst,epochDateLast];
+}
 
 function convertEpoch2Date(epochData){
 
   if(parseInt(epochData)>10000){
     var actualDate = new Date();
-    var actualHours = actualDate.getHours();
 
     var d = new Date(parseInt(epochData)*1000);
     var day     =  d.getDate() +'';
@@ -441,6 +480,7 @@ function convertEpoch2Date(epochData){
     var seconds =  d.getSeconds()+'';
 
     /*
+    var actualHours = actualDate.getHours();
     if(parseInt(hour) > parseInt(actualHours)){
       if(parseInt(hour) < 5){
         var dif = hour - 5;
@@ -498,37 +538,47 @@ function convertEpoch2Date(epochData){
   var filter_date_end   = "" ;
   var date_today;
 
-    $(document).ready(function(){
-      //valores minimos y maximos:
-      var min = "{{ arduinosensor.min_value }}";
-      var max = "{{ arduinosensor.max_value }}";
-      $('#val_min').html(min.substring(0,(min.length-2)));
-      $('#val_max').html(max.substring(0,(max.length-2)));
-
-      //ocultamos los selectores de la grafica
-      filter_type = 1;
-
-      $("#filter_date").hide();
-      $("#filter_limit").hide();
-      date_today = moment().format("YYYY-MM-DD");
-      //primera petición de datos.
-      allData = getDataFromAPI("","",query_dataLimit);
-
-      $("#filter_resume").html("Ultimos " + query_dataLimit + " registros" );
-
-    });
 
 
 
-    $(tableNameID).DataTable({
-      "paging": true,
-      "lengthChange": false,
-      "searching": true,
-      "ordering": true,
-      "info": true,
-      "autoWidth": false,
-      "pageLength": 5
-    });
+  $(document).ready(function(){
+
+    var todayDate = new Date();
+    var dateRange = getTodayRange(todayDate);
+    console.log(dateRange);
+
+    //valores minimos y maximos:
+    var min = "{{ arduinosensor.min_value }}";
+    var max = "{{ arduinosensor.max_value }}";
+    $('#val_min').html(min.substring(0,(min.length-2)));
+    $('#val_max').html(max.substring(0,(max.length-2)));
+
+    //ocultamos los selectores de la grafica
+    filter_type = 1;
+
+    $("#filter_date").hide();
+    $("#filter_limit").hide();
+    date_today = moment().format("YYYY-MM-DD");
+    //primera petición de datos.
+    allData = getDataFromAPI(dateRange[0],dateRange[1],"");
+
+    $("#filter_resume").html("Ultimos " + query_dataLimit + " registros" );
+
+
+  });
+
+
+
+
+  $(tableNameID).DataTable({
+    "paging": true,
+    "lengthChange": false,
+    "searching": true,
+    "ordering": true,
+    "info": true,
+    "autoWidth": false,
+    "pageLength": 5
+  });
 
 
 
