--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -374,9 +374,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 0.0.1
+      <b>Version</b> 0.1.11
     </div>
-    <strong> ADU Panthea </strong> Todos los Derechos Reservados ® 2015-2016
+    <strong> Panthea ADU </strong> Todos los Derechos Reservados ® 2015-2016
   </footer>
 
 {% endblock %}
