--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -167,7 +167,7 @@
 
   function createSocket(arduinoID, arduinoToken){
     var ws4redis = WS4Redis({
-      uri: ws_url+'/ws/'+arduinoToken+'?subscribe-broadcast&publish-broadcast&echo',
+      uri: ws_url+'/ws/arduino/'+arduinoToken,
       //'ws://sensait.dyndns.org/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
       //':'+userPort+
       connecting: on_connecting,
